<resources>
    <string name="app_name">执法记录仪</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="regist_org_hint">邀请码</string>
    <string name="regist_name_hint">姓名</string>
    <string name="regist_button">注册</string>
    <string name="reauth_button">认证</string>
    <string name="bottom_navigation_talkback">对讲</string>
    <string name="bottom_navigation_person_contacts">消息</string>
    <string name="bottom_navigation_group_contacts">通讯录</string>
    <string name="bottom_navigation_setting">我</string>
    <string name="i_am_speaking">我</string>
    <string name="pre_speaking">准备说话...</string>
    <string name="change_group_promp">滑动换组</string>
    <string name="press_to_talk_text">按住说话</string>
    <string name="silence_text">空闲</string>
    <string name="other_is_talking_text">其它人正在说话</string>
    <string name="wait_in_line_text">排队中&#8230;</string>
    <string name="not_listen">您已被禁听</string>
    <string name="not_speak">您已被禁言</string>
    <string name="not_listen_and_speak">您已被禁言和禁听</string>
    <!-- 自动更新 -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <!-- 设置界面 -->
    <string name="log_upload">日志上传</string>
    <string name="individuation">个性装扮</string>
    <string name="group_scan">组扫描</string>
    <string name="volume_setting">音量</string>
    <string name="volume_setting_size_pro">提示音量</string>
    <string name="volume_setting_size_call">通话音量</string>
    <string name="volume_number_setting">60%</string>
    <string name="exit">退出系统</string>
    <string name="ptt_setting">PTT设置</string>
    <string name="pttfloat_setting">悬浮按钮设置</string>
    <!-- 下拉刷新 -->
    <string name="pull_to_refresh_pull_label">下拉刷新...</string>
    <string name="pull_to_refresh_release_label">释放以刷新...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">加载之前数据</string>
    <string name="pull_to_refresh_updated_at_label">更新于: </string>
    <string name="loadmore_label">加载更多</string>
    <string name="loading_label">正在加载....</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="tv_linkman_delete">删除联系人</string>
    <string name="connect_us_phone">18301003647</string>
    <!--文件发送-->
    <string name="size">已选%1$s</string>
    <string name="send">发送(%1$s)</string>
    <string name="count">共%1$s个文件</string>
    <!--录音-->
    <string name="up_for_cancel">手指上滑，取消发送</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="time_too_short">录音时间过短</string>
    <string name="long_click_record">长按 录音</string>
    <string name="hang_up_finsh">松开 结束</string>
    <string name="release_cancel">松开 取消</string>
    <string name="current_group_members">%1$d人在线</string>
    <string name="current_push_member">%1$s上报图像</string>
    <string name="force_off_line">该账号被强制下线</string>

    <string name="text_log_upload_success_thanks">日志上传成功，感谢您的支持！</string>
    <string name="text_log_upload_fail_please_try_later">日志上传失败，请稍后重试！</string>

    <string name="text_unlogin">设备未登录</string>
    <string name="text_bind">绑定</string>
    <string name="text_bind_way">绑定方式</string>
    <string name="text_binded">已绑定</string>
    <string name="text_bind_nfc">NFC绑定</string>
    <string name="text_bind_qr_scan">扫码绑定</string>
    <string name="text_bind_input">输入警号绑定</string>
    <string name="text_i_want_to_unbind">我要解绑</string>
    <string name="text_open_nfc">打开NFC</string>
    <string name="text_nfc_opened">NFC已开启</string>
    <string name="text_nfc_is_not_opened">检测到NFC未开启</string>
    <string name="text_unbind">解绑/切换</string>
    <string name="text_unbind_switch">解绑/切换绑定</string>
    <string name="text_bind_unbind">绑定/解绑</string>
    <string name="text_logging">正在登录</string>
    <string name="text_authing">正在认证</string>
    <string name="text_network_disconnect">网络连接异常</string>
    <string name="text_connecting">正在连接服务器</string>
    <string name="text_updatting">正在更新数据</string>
    <string name="text_login_success">登录成功</string>
    <string name="text_login_error">登录失败</string>
    <string name="text_dept_not_activated">暂时未开通权限</string>
    <string name="text_dept_expired">部门授权过期</string>
    <string name="text_terminal_type_error">认证失败,类型不匹配</string>
    <string name="text_terminal_repeat">登录失败,找到多个重复用户</string>
    <string name="text_auth_error">认证失败</string>
    <string name="text_please_regist_first">请注册账号</string>
    <string name="text_server_ip_no_used">服务器地址不可用</string>
    <string name="text_invitation_code_error_regist_again">邀请码错误，请重新注册！</string>
    <string name="text_regist_error_please_check">注册失败，请检查各项信息是否正确！</string>
    <string name="text_tempt_info_with_use_nfc">将执法记录仪贴紧警务通</string>
    <string name="text_tempt_info_with_use_qr_scan">用警务通扫码绑定</string>
    <string name="text_tempt_associated_account">关联账号</string>
    <string name="text_tempt_bind_unbind">NFC绑定、扫码绑定、输警号绑定</string>
    <string name="text_tempt_set">实时视频上报时长、网络参数、服务器地址</string>
    <string name="text_tempt_video_picture">录像查看、照片查看</string>

    <string name="text_change_group">转组</string>
    <string name="text_set">设置</string>
    <string name="text_menu">菜单</string>
    <string name="text_video_picture">录像、照片</string>
    <string name="text_sure">确定</string>
    <string name="text_video_and_picture">录像和照片</string>
    <string name="text_video">录像</string>
    <string name="text_picture">照片</string>

    <string name="text_imei_null">获取IMEI信息失败</string>
    <string name="text_member_id">设备号%1$d</string>
    <string name="text_bind_member_id">%1$s&#160;%2$d</string>
    <string name="text_nfc_state_error">NFC状态异常</string>
    <string name="text_has_no_nfc">该设备不支持NFC</string>
    <string name="text_input_bind_police_id">输入要绑定的ID</string>
    <string name="text_set_living_stop_time_title">实时视频上报时长</string>
    <string name="text_set_living_stop_time">实时视频上报时长设置</string>
    <string name="text_set_server">IP、端口号设置</string>
    <string name="text_set_vpn">VPN设置</string>
    <string name="text_set_server_ip">I&#160;P:</string>
    <string name="text_set_server_port">端口号:</string>
    <string name="text_search">搜索</string>
    <string name="text_search_group_by_name_and_id">输入组名称/编号</string>
    <string name="text_search_group_empty">未找到相应结果</string>
    <string name="text_please_input_bind_police_id">请输入要绑定的ID</string>
    <string name="text_please_input_ip_port">请输入IP、端口号</string>
    <string name="text_network_is_disconnect">网络已断开</string>
    <string name="text_network_is_connect">网络已连接</string>
    <string name="text_no_login_can_not_push">未登录，不能上报图像</string>
    <string name="text_no_login_can_not_upload_log">未登录，不能上传日志</string>
    <string name="text_unbind_success">解绑成功</string>
    <string name="text_bind_success">绑定成功</string>
    <string name="text_request_bind_success">绑定请求发送成功</string>
    <string name="text_request_bind_fail">绑定请求发送失败</string>
    <string name="text_connect_fail_please_input_corrent_ip_and_port">连通失败,请输入正确的IP和端口号</string>
    <string name="text_change_server">切换环境</string>
    <string name="text_move_task_to_back">后台运行</string>
    <string name="text_change_group_success">转组成功</string>
    <string name="text_refuse">拒绝</string>
    <string name="text_tempt_living_stop_time">您已经连续上报%1$d小时,%2$d分钟后自动停止上报</string>
    <string name="text_tempt_living_stop_time_set">超出上报时长将自动停止上报</string>
    <string name="text_living_stop_time">%1$d小时</string>
    <string name="text_living_stop_time_no_limit">不限时</string>
    <string name="text_set_living_stop_time_tempt">当前上报时长已经是%1$d小时</string>
    <string name="text_set_living_no_stop_time_tempt">当前上报时长已经是不限时</string>
    <string name="text_set_success">设置成功</string>
    <string name="text_set_fail">设置失败</string>
    <string name="text_set_success_next_used">设置成功,下次生效</string>
    <string name="text_app_list">应用列表</string>
    <string name="tv_set_infra_red">红外设置</string>
    <string name="tv_set_close">关</string>
    <string name="tv_set_open">开</string>
    <string name="tv_set_automatic">自动</string>

    <string name="text_file_video_empty">无录像</string>
    <string name="text_file_picture_empty">无照片</string>
    <string name="quiet_play">静音播放</string>
    <string name="text_play">播放</string>
    <string name="uav_push_quiet_play">正在上报图像，只能静音预览</string>

    <string name="text_show_picture_index">(%1$d/%2$d)</string>
</resources>
