<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_80"
    android:clickable="true"
    android:focusable="true"
    android:paddingTop="@dimen/dp_30"
    android:orientation="vertical">

    <include layout="@layout/layout_top_close"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_nfc_no_open"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_nfc_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bt_open_nfc"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_centerHorizontal="true"
                android:text="@string/text_nfc_is_not_opened"
                android:textSize="@dimen/sp_24"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/bt_open_nfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_bind_button_blue_2"
                android:paddingBottom="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_30"
                android:paddingRight="@dimen/dp_30"
                android:gravity="center"
                android:text="@string/text_open_nfc"
                android:textSize="@dimen/sp_24"
                android:textColor="@color/blue_42" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/rl_nfc_opened"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/dp_30"
            android:paddingBottom="@dimen/dp_20"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">


            <ImageView
                android:id="@+id/iv_nfc"
                android:layout_width="@dimen/dp_164"
                android:layout_height="@dimen/dp_118"
                android:src="@drawable/anim_nfc" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:src="@drawable/ico_openbinding_nfc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/text_nfc_opened"
                    android:textSize="@dimen/sp_20"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/text_tempt_info_with_use_nfc"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/white_40" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>