<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_80"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_30">

    <include layout="@layout/layout_top_close" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RadioGroup
            android:id="@+id/rg_Orientation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_7"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:paddingTop="@dimen/dp_7"
                android:paddingBottom="@dimen/dp_7"
                android:text="@string/tv_set_close"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_24"
                android:button="@null"
                android:stateListAnimator="@null"
                android:drawableRight="@drawable/bg_rb"
                android:background="@android:color/transparent"/>

            <RadioButton
                android:id="@+id/rb_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:paddingTop="@dimen/dp_7"
                android:paddingBottom="@dimen/dp_7"
                android:text="@string/tv_set_open"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_24"
                android:button="@null"
                android:stateListAnimator="@null"
                android:drawableRight="@drawable/bg_rb"
                android:background="@android:color/transparent"/>

            <RadioButton
                android:id="@+id/rb_automatic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:paddingTop="@dimen/dp_7"
                android:paddingBottom="@dimen/dp_7"
                android:text="@string/tv_set_automatic"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_24"
                android:button="@null"
                android:stateListAnimator="@null"
                android:visibility="gone"
                android:drawableRight="@drawable/bg_rb"
                android:background="@android:color/transparent"/>
        </RadioGroup>
    </ScrollView>
</LinearLayout>